--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.card-style {
+  border-radius: 20px !important;
+  box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
+  height: 150px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-style2 {
+  border-radius: 20px !important;
+  box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(184, 173, 173, 0.75);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-style {
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
